# mal3pc-dzkp

./: README.md
C++/src/: arithmetic.h  prover  prover.cpp
dzkp/: Cargo.toml
dzkp/src/: lib.rs
dzkp/src/binary_dzkp/: mod.rs  prover.rs  prover2.rs  prover3.rs
dzkp/src/mersenne_field/: arithmetic.rs  mod.rs
dzkp/src/polynomial/: interpolation.rs  lagrange.rs  mod.rs  poly.rs
