[package]
name = "dzkp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = ["parallel"]
# parallel = ["rayon"]

[dependencies]
merlin = { version = "2.0", default-features = false }
rand = { version = "0.7", default-features = false }
rayon = { version = "1", optional = true }
derivative = { version = "2", default-features = false, features = [ "use_core" ] }
ark-serialize = { version = "^0.3.0", default-features = false, features = [ "derive" ] }

[dev-dependencies]
rand = { version = "0.7" }
